crates/stylex-transform/tests/transform_import_export_test/snapshots/transform__transform_import_export_test__commonjs_require_shapes__a_destructured_require_of_a_name_that_is_no_api.snap
---
source: crates/stylex-transform/tests/transform_import_export_test/commonjs_require_shapes.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
const { notAnApi } = require('@stylexjs/stylex');
notAnApi({
    base: {
        color: 'red'
    }
});
export const styles = {
    base: {
        kMwMTN: "x1e2nbdu",
        $$css: true
    }
};
