crates/stylex-transform/tests/transform_import_export_test/snapshots/transform__transform_import_export_test__commonjs_require_shapes__a_require_call_that_names_no_module.snap
---
source: crates/stylex-transform/tests/transform_import_export_test/commonjs_require_shapes.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
export const empty = require();
export const spread = require(...sources);
export const named = require(sourceName);
export const numbered = require(42);
export const styles = {
    base: {
        kMwMTN: "x1e2nbdu",
        $$css: true
    }
};
