crates/stylex-transform/tests/transform_import_export_test/snapshots/transform__transform_import_export_test__commonjs_require_shapes__a_require_read_under_a_configured_import_alias.snap
---
source: crates/stylex-transform/tests/transform_import_export_test/commonjs_require_shapes.rs
expression: output
---
export const whole = require('react-strict-dom');
export const { html } = require('react-strict-dom');
const { css } = require('react-strict-dom');
export const styles = {
    base: {
        kMwMTN: "x1e2nbdu",
        $$css: true
    }
};
