crates/stylex-transform/tests/transform_import_export_test/snapshots/transform__transform_import_export_test__commonjs_require_shapes__an_atoms_require_bound_to_a_shape_that_names_no_local.snap
---
source: crates/stylex-transform/tests/transform_import_export_test/commonjs_require_shapes.rs
expression: output
---
import stylex from '@stylexjs/stylex';
export const [firstAtom] = require('@stylexjs/atoms');
const { ...everyAtom } = require('@stylexjs/atoms');
const { color } = require('@stylexjs/atoms');
({
    className: "xju2f9n"
});
